--- a/Natixis2025/force-app/main/default/classes/PortfolioAncestorsCreateHierarchyBatch.cls
+++ b/Natixis2025/force-app/main/default/classes/PortfolioAncestorsCreateHierarchyBatch.cls
@@ -1,14 +1,13 @@
-public class PortfolioAncestorsCreateHierarchyBatch implements Database.Batchable < SObject > , Database.Stateful, Database.AllowsCallouts {
+public without sharing class CustomerPortfolioBatch implements  Database.Batchable <SObject> , Database.Stateful, Database.AllowsCallouts {
     private Map <Id, UserRole>          allRoles                            = new Map <Id, UserRole> ();
-    private List <CustomerPortfolio__c> custPortToCreate                    = new List <CustomerPortfolio__c> ();
-    private set <string>                preventDuplicatesCustomerPortfolios = new set <string> ();
     private map <Id,set<Id>>            roleToAncestors                     = new  map <Id,set<Id>> ();
     
     public Database.QueryLocator start(Database.BatchableContext bc) {
         //get all role in the org
         allRoles         = new Map < Id, UserRole > ([SELECT Id, ParentRoleId FROM UserRole]);
         roleToAncestors  = getRoleHierarchyAncestors();
-        return Database.getQueryLocator([SELECT Id, User__c, UserRole__c, User__r.UserRole.ParentRoleId, ParentContactAccountId__c, Contact__c ,CustomerPortfolioKey__c FROM CustomerPortfolio__c ]);
+        DateTime fourHoursAgo = System.now().addHours(-4);
+        return Database.getQueryLocator([SELECT Id, User__c, UserRole__c, User__r.UserRole.ParentRoleId, ParentContactAccountId__c, Contact__c ,CustomerPortfolioKey__c,Favorite__c FROM CustomerPortfolio__c WHERE Source__c =: 'External' AND (CreatedDate >=: fourHoursAgo OR LastModifiedDate >=: fourHoursAgo) ]);
     }
     
     //Creates a map with all roles with respective ancestors 
@@ -32,8 +31,8 @@ public class PortfolioAncestorsCreateHierarchyBatch implements Database.Batchabl
     
     //Execute the logic to create Portfolios to ancestors 
     public void checkIfPortfolioshasAncestors(list<CustomerPortfolio__c> scope){
-        map <CustomerPortfolio__c,set<id>> customerPortfoliosWithRolesToCreate  = new map < CustomerPortfolio__c, set < id >> ();
         set <Id> usersRolesToSearch                                             = new set < Id > ();
+        list<CustomerPortofolioWrapper> custPortfoliosToCreate                  = new list<CustomerPortofolioWrapper>();
         
         for (CustomerPortfolio__c iCustPort: scope) {
             //booelan to find if the current role has ancestors on map to create portfolios above
@@ -41,20 +40,29 @@ public class PortfolioAncestorsCreateHierarchyBatch implements Database.Batchabl
             set<Id> ancestorsIdToCreatePortfolios = hasAncestors ? roleToAncestors?.get(iCustPort.User__r.UserRoleId) : new set < id > ();
             
             if (ancestorsIdToCreatePortfolios.isEmpty() == false && ancestorsIdToCreatePortfolios != null) {
-                customerPortfoliosWithRolesToCreate.put(iCustPort, ancestorsIdToCreatePortfolios);
+                for(Id roleId : ancestorsIdToCreatePortfolios){
+                    CustomerPortofolioWrapper newPortfolio = new CustomerPortofolioWrapper(
+                                                            roleId,
+                                                            iCustPort.Contact__c,
+                                                            iCustPort.Favorite__c
+                                                            );
+                    custPortfoliosToCreate.add(newPortfolio);
+                }
                 //add roles of ancestors to query user infos later
                 usersRolesToSearch.addAll(ancestorsIdToCreatePortfolios);
+                usersRolesToSearch.add(iCustPort.User__r.UserRoleId);
             }
         }
-        
-        if(customerPortfoliosWithRolesToCreate.isEmpty() == false) {
+        if(custPortfoliosToCreate.isEmpty() == false) {
             //Creates a map with roles as keys to retrieve the corresponding list of users.
             Map<Id,List<User>> userRoleToUsersMap = getUsersFromRoles(usersRolesToSearch);
-            setPortofoliosToCreate(scope, customerPortfoliosWithRolesToCreate,userRoleToUsersMap);
+            setPortofoliosToCreate(custPortfoliosToCreate ,userRoleToUsersMap);
         }
     }
+
     //create map with roles to get users on it
     public Map <Id,List<User>> getUsersFromRoles(set<Id> usersRolesToSearch) {
+        
         Map <Id,List <User>> userRoleToUsersMap = new Map < Id, List < User >> ();
         for (User iUser: [SELECT Id, UserRoleId FROM User WHERE UserRoleId IN: usersRolesToSearch]) {
             if (!userRoleToUsersMap.containsKey(iUser.UserRoleId)) userRoleToUsersMap.put(iUser.UserRoleId, new List < User > ());
@@ -65,36 +73,39 @@ public class PortfolioAncestorsCreateHierarchyBatch implements Database.Batchabl
     }
     
     //execute logic to create portfolios
-    public void setPortofoliosToCreate(List<CustomerPortfolio__c> scope,  map <CustomerPortfolio__c,set<id>> customerPortfoliosWithRolesToCreate,Map<Id,List<User>> userRoleToUsersMap) {
-        for (CustomerPortfolio__c iCust: scope) preventDuplicatesCustomerPortfolios.add(iCust.CustomerPortfolioKey__c);
-        for (CustomerPortfolio__c iCustPort: customerPortfoliosWithRolesToCreate.keySet()) {
-            Set < Id > rolesIdToCreate = customerPortfoliosWithRolesToCreate.get(iCustPort);
-            for (Id roleId: rolesIdToCreate) {
-                if (userRoleToUsersMap.containsKey(roleId)) {
-                    for (User matchingUser: userRoleToUsersMap.get(roleId)) {
-                        if (preventDuplicatesCustomerPortfolios.contains(string.valueOf(matchingUser.Id) + string.valueOf(iCustPort.Contact__c)) == false) {
-                            addCustPortRecordToCreate(iCustPort, matchingUser.Id);
-                        }
-                    }
-                }
+    public void setPortofoliosToCreate(list <CustomerPortofolioWrapper> listWrapper,Map<Id,List<User>> userRoleToUsersMap) {
+        list<CustomerPortfolio__c> custPortToCreate       = new list<CustomerPortfolio__c>();
+        for(CustomerPortofolioWrapper iCutPortToCopy : listWrapper){
+            for(User iUser : userRoleToUsersMap.get(iCutPortToCopy.roleId)){
+                custPortToCreate.add(setCustomerPortfolioRecord(iUser.Id, iCutPortToCopy.contactId));
             }
         }
+        if(custPortToCreate.isEmpty()==false) insertPortfolio(custPortToCreate);
     }
     
-    
-    public void addCustPortRecordToCreate(CustomerPortfolio__c custPortRecordToCopy, Id matchingUserId){
-        CustomerPortfolio__c newCustPortfolio = new CustomerPortfolio__c(
-            User__c    = matchingUserId,
-            Contact__c = custPortRecordToCopy.Contact__c,
+    public CustomerPortfolio__c setCustomerPortfolioRecord( Id userId, Id contactId){
+            CustomerPortfolio__c newCustPortfolio = new CustomerPortfolio__c(
+            User__c    = userId,
+            Contact__c = contactId,           
             Source__c  = 'Internal',
-            CustomerPortfolioKey__c = string.valueOf(matchingUserId) + string.valueOf(custPortRecordToCopy.Contact__c)
+            CustomerPortfolioKey__c =  string.valueOf(userId) + string.valueOf(contactId)
         );
-        preventDuplicatesCustomerPortfolios.add(string.valueOf(matchingUserId) + string.valueOf(custPortRecordToCopy.Contact__c));
-        custPortToCreate.add(newCustPortfolio);
+        return newCustPortfolio;
+    }
+
+    public void insertPortfolio(list<CustomerPortfolio__c> custPortToCreate ){
+
+            Database.SaveResult[] insertPortfoliosResult = Database.insert(custPortToCreate, false);
+            for (Integer i = 0; i < insertPortfoliosResult.size(); i++) {
+                if (!insertPortfoliosResult[i].isSuccess()) {
+                    System.debug('Failed Contact Share Insertion: ' + insertPortfoliosResult[i].getErrors()[0].getMessage());
+                    System.debug('Send Email To Tech Lead with Failed and Save on Log Object');
+                }
+            }
     }
     
     public void finish(Database.BatchableContext bc) {
-        if(custPortToCreate.isEmpty()==false) Database.insert(custPortToCreate, false);
-        Database.executeBatch(new PortfolioAncestorsDeletHierarchyBatch(), 200);
+        Database.executeBatch(new CustomerPortfolioSecondaryBatch(), 200);
     }
+    
 }
